# src/routes/categories.routes.ts
@@ -1,24 +1,20 @@
-import { Router } from "express";
-import createCategoryController from "../modules/cars/useCases/createCategory";
-import { listCategoryController } from "../modules/cars/useCases/listCateogries";
 import multer from "multer";
-import { importCategoryController } from "../modules/cars/useCases/importCategory";
+import { Router } from "express";
+import { CreateCategoryController } from "../modules/cars/useCases/createCategory/CreateCategoryController";
+import { ImportCategoryController } from "../modules/cars/useCases/importCategory/ImportCategoryController";
+import { ListCategoryController } from "../modules/cars/useCases/listCateogries/ListCategoriesController";
 
 
 const upload = multer({ dest: './tmp' })
 const categoriesRoutes = Router();
 
+const createCategoryController = new CreateCategoryController();
+const importCategoryController = new ImportCategoryController();
+const listCategoryController = new ListCategoryController();
 
-categoriesRoutes.post("/", (request, response) => {
-    return createCategoryController().handle(request, response);
-});
 
-categoriesRoutes.get("/", (request, response) => {
-    return listCategoryController.handle(request, response);
-});
-
-categoriesRoutes.post('/import', upload.single('file'), (request, response) => {
-    return importCategoryController.handle(request, response);
-})
+categoriesRoutes.post("/", createCategoryController.handle);
+categoriesRoutes.get("/", listCategoryController.handle);
+categoriesRoutes.post('/import', upload.single('file'), importCategoryController.handle);
 
 export { categoriesRoutes }
